[doc] Update document for trino and presto (#1091)