@@ -26,6 +26,263 @@ under the License.
 
 # Trino
 
-Because Trino's dependency is JDK 11, it is not possible to include the trino connector in [paimon](https://github.com/apache/incubator-paimon).
+This documentation is a guide for using Paimon in Trino.
 
-See [paimon-trino](https://github.com/JingsongLi/paimon-trino).
+## Version
+
+Paimon currently supports Trino 358 and above.
+
+## Preparing Paimon Jar File
+
+{{< stable >}}
+
+Download the jar file with corresponding version.
+
+| Version       | Jar                                                                                                                                                                     |
+|---------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| [358, 368)    | [paimon-trino-358-{{< version >}}.jar](https://repo.maven.apache.org/maven2/org/apache/paimon/paimon-trino-358/{{< version >}}/paimon-trino-358-{{< version >}}.jar)    |
+| [368, 369)    | [paimon-trino-368-{{< version >}}.jar](https://repo.maven.apache.org/maven2/org/apache/paimon/paimon-trino-368/{{< version >}}/paimon-trino-368-{{< version >}}.jar)    |
+| [369, 370)    | [paimon-trino-369-{{< version >}}.jar](https://repo.maven.apache.org/maven2/org/apache/paimon/paimon-trino-369/{{< version >}}/paimon-trino-369-{{< version >}}.jar)    |
+| [370, 388)    | [paimon-trino-370-{{< version >}}.jar](https://repo.maven.apache.org/maven2/org/apache/paimon/paimon-trino-370/{{< version >}}/paimon-trino-370-{{< version >}}.jar)    |
+| [388, 393)    | [paimon-trino-388-{{< version >}}.jar](https://repo.maven.apache.org/maven2/org/apache/paimon/paimon-trino-388/{{< version >}}/paimon-trino-388-{{< version >}}.jar)    |
+| [393, latest] | [paimon-trino-393-{{< version >}}.jar](https://repo.maven.apache.org/maven2/org/apache/paimon/paimon-trino-393/{{< version >}}/paimon-trino-393-{{< version >}}.jar)    |
+
+{{< /stable >}}
+
+{{< unstable >}}
+
+| Version       | Jar                                                                                                                                 |
+|---------------|-------------------------------------------------------------------------------------------------------------------------------------|
+| [358, 368)    | [paimon-trino-358-{{< version >}}.jar](https://repository.apache.org/snapshots/org/apache/paimon/paimon-trino-358/{{< version >}}/) |
+| [368, 369)    | [paimon-trino-368-{{< version >}}.jar](https://repository.apache.org/snapshots/org/apache/paimon/paimon-trino-368/{{< version >}}/) |
+| [369, 370)    | [paimon-trino-369-{{< version >}}.jar](https://repository.apache.org/snapshots/org/apache/paimon/paimon-trino-369/{{< version >}}/) |
+| [370, 388)    | [paimon-trino-370-{{< version >}}.jar](https://repository.apache.org/snapshots/org/apache/paimon/paimon-trino-370/{{< version >}}/) |
+| [388, 393)    | [paimon-trino-388-{{< version >}}.jar](https://repository.apache.org/snapshots/org/apache/paimon/paimon-trino-388/{{< version >}}/) |
+| [393, latest] | [paimon-trino-393-{{< version >}}.jar](https://repository.apache.org/snapshots/org/apache/paimon/paimon-trino-393/{{< version >}}/) |
+
+{{< /unstable >}}
+
+You can also manually build a bundled jar from the source code. However, there are a few preliminary steps that need to be taken before compiling:
+
+- To build from the source code, [clone the git repository]({{< trino_github_repo >}}).
+- Install JDK11 and JDK17 locally, and configure JDK11 as a global environment variable;
+- Configure the toolchains.xml file in ${{ MAVEN_HOME }}, the content is as follows.
+
+```
+ <toolchains>
+    <toolchain>
+        <type>jdk</type>
+        <provides>
+            <version>17</version>
+            <vendor>adopt</vendor>
+        </provides>
+        <configuration>
+            <jdkHome>${{ JAVA_HOME }}</jdkHome>
+        </configuration>
+    </toolchain>
+ </toolchains>          
+```
+
+Then,you can build bundled jar with the following command:
+
+```
+mvn clean install -DskipTests
+```
+
+You can find Trino connector jar in `./paimon-trino-<trino-version>/target/paimon-trino-*.jar`.
+
+Then, copy `paimon-trino-*.jar and flink-shaded-hadoop-*-uber-*.jar` to plugin/paimon.
+
+> NOTE: For JDK 17, when Deploying Trino, should add jvm options: --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED
+
+## Configure Paimon Catalog
+
+Catalogs are registered by creating a catalog properties file in the etc/catalog directory. For example, create etc/catalog/paimon.properties with the following contents to mount the paimon connector as the paimon catalog:
+
+```
+connector.name=paimon
+warehouse=file:/tmp/warehouse
+```
+
+If you are using HDFS, choose one of the following ways to configure your HDFS:
+
+- set environment variable HADOOP_HOME.
+- set environment variable HADOOP_CONF_DIR.
+- configure fs.hdfs.hadoopconf in the properties.
+
+## Kerberos
+
+You can configure kerberos keytag file when using KERBEROS authentication in the properties.
+
+```
+security.kerberos.login.principal=hadoop-user
+security.kerberos.login.keytab=/etc/trino/hdfs.keytab
+```
+
+Keytab files must be distributed to every node in the cluster that runs Trino.
+
+## Create Schema
+
+```
+CREATE SCHEMA paimon.test_db;
+```
+
+## Create Table
+
+```
+CREATE TABLE paimon.test_db.orders (
+    order_key bigint,
+    orders_tatus varchar,
+    total_price decimal(18,4),
+    order_date date
+)
+WITH (
+    file_format = 'ORC',
+    primary_key = ARRAY['order_key','order_date'],
+    partitioned_by = ARRAY['orderdate'],
+    bucket = '2',
+    bucket_key = 'order_key',
+    changelog_producer = 'input'
+)
+```
+
+## Add Column
+
+```
+CREATE TABLE paimon.test_db.orders (
+    order_key bigint,
+    orders_tatus varchar,
+    total_price decimal(18,4),
+    order_date date
+)
+WITH (
+    file_format = 'ORC',
+    primary_key = ARRAY['order_key','order_date'],
+    partitioned_by = ARRAY['orderdate'],
+    bucket = '2',
+    bucket_key = 'order_key',
+    changelog_producer = 'input'
+)
+
+ALTER TABLE paimon.test_db.orders ADD COLUMN "shipping_address varchar;
+```
+
+## Query
+
+```
+SELECT * FROM paimon.test_db.orders
+```
+
+## Query with Time Traveling
+
+```
+SET SESSION paimon.scan_timestamp_millis=1679486589444;
+SELECT * FROM paimon.test_db.orders;
+```
+
+## Trino to Paimon type mapping
+
+This section lists all supported type conversion between Trino and Paimon.
+All Trino's data types are available in package `io.trino.spi.type`.
+
+<table class="table table-bordered">
+    <thead>
+    <tr>
+      <th class="text-left" style="width: 10%">Trino Data Type</th>
+      <th class="text-left" style="width: 10%">Paimon Data Type</th>
+      <th class="text-left" style="width: 5%">Atomic Type</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <td><code>RowType</code></td>
+      <td><code>RowType</code></td>
+      <td>false</td>
+    </tr>
+    <tr>
+      <td><code>MapType</code></td>
+      <td><code>MapType</code></td>
+      <td>false</td>
+    </tr>
+    <tr>
+      <td><code>ArrayType</code></td>
+      <td><code>ArrayType</code></td>
+      <td>false</td>
+    </tr>
+    <tr>
+      <td><code>BooleanType</code></td>
+      <td><code>BooleanType</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>TinyintType</code></td>
+      <td><code>TinyIntType</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>SmallintType</code></td>
+      <td><code>SmallIntType</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>IntegerType</code></td>
+      <td><code>IntType</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>BigintType</code></td>
+      <td><code>BigIntType</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>RealType</code></td>
+      <td><code>FloatType</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>DoubleType</code></td>
+      <td><code>DoubleType</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>CharType(length)</code></td>
+      <td><code>CharType(length)</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>VarCharType(VarCharType.MAX_LENGTH)</code></td>
+      <td><code>VarCharType(VarCharType.MAX_LENGTH)</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>VarCharType(length)</code></td>
+      <td><code>VarCharType(length), length is less than VarCharType.MAX_LENGTH</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>DateType</code></td>
+      <td><code>DateType</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>TimestampType</code></td>
+      <td><code>TimestampType</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>DecimalType(precision, scale)</code></td>
+      <td><code>DecimalType(precision, scale)</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>VarBinaryType(length)</code></td>
+      <td><code>VarBinaryType(length)</code></td>
+      <td>true</td>
+    </tr>
+    <tr>
+      <td><code>TimestampWithTimeZoneType</code></td>
+      <td><code>LocalZonedTimestampType</code></td>
+      <td>true</td>
+    </tr>
+    </tbody>
+</table>
